<resources>
    <string name="app_name">meuwealfa</string>
    <string name="title_activity_maps">Map</string>
    <string name="Photo_Description">now, write a short description</string>
    <string name="Description">tap to write description of an event...</string>
    <string name="button_post">POST IT!</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>

    <string name="action_settings">Settings</string>
    <string name="future_feature_chat">this WILL be chat soon</string>
    <string name="meuwe_button">meuwe</string>
    <string name="Welcome_Logo">meuwe</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="Enter_text_box">Here write about your activity!</string>
    <string name="goback_button">back to map</string>
    <string name="Comment_bar_fake">56 views,           7 comments</string>
    <string name="Button_Publish">Publish!</string>
    <string name="czat1">Tomek_Stonek: cześć, z checią spróbuję tego longboardu! widzimy się na miejscu!</string>
    <string name="czat2">AgnieszkaBojowniczka: A może również rolki?</string>
    <string name="czat3">Maćko_z_Bogdańca: Super! mój numer tel. to 123456789 zadzwoń jak już będziesz.</string>
    <string name="czat4">Logan_Superhero: Może podjedziemy na skatepark? Chętni?</string>
    <string name="czat5">OnBestFriend: ojoj dzisiaj nie mogę ale super pomysł! fajnie że ktoś z okolicy lubi to co ja</string>
    <string name="czat6">Kasia1998: zbieram koleżanki i wpadamy! #girlpower #dziewczynyNaLongu</string>
    <string name="czat7">NewUser987: siema! mogę czekać pod Twoim blokiem o 17 ;)</string>
    <string name="CameraWindow">camera</string>
    <string name="Take_Fake_Photo">-</string>
    <string name="AddPhotoHint">Tap to add photo</string>
    <string name="ErrNoAppToMakePhotos">No App to make Photos</string>
    <string name="EventImageDesc">Event Image</string>
    <string name="LoginText">Login</string>
    <string name="showMapText">Show Map</string>
    <string name="myPostsText">My Posts</string>
    <string name="logoutText">Logout</string>
    <string name="ProfileTabText">Profile</string>
    <string name="PostsTabText">Posts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="NameHint">Name</string>
    <string name="emailText">E-mail</string>
    <string name="passwordText">Password</string>
    <string name="ConfimtPasswordHint">Confirm Password</string>
    <string name="PasswordsDontMatchError">Passwords don\'t match!</string>
    <string name="FieldsCannotBeEmptyError">Fields cannot be empty!</string>
    <string name="UserSuccesfullyAddedToast">User successfully added!</string>
    <string name="numberOfViews">%d views</string>
    <string name="numberOfResponses">%d responses</string>
    <string name="TitleText">Title</string>
    <string name="postbitmapCache">postbitmapCache.png</string>
    <string name="SearchHereButtonMapText">Search Here!</string>
    <string name="SearchTagHint">Search Tag</string>
    <string name="tagsListText">Tags List</string>
    <string name="EditText">Edit...</string>
    <string name="text_message_body">%s\n%s\n#%s</string>
    <string name="tags_split_regex_formula">\\s*,\\s*|\\s*;\\s*|\\s*#\\s*</string>
    <item name="PasswordsDontMatchError" type="id">Passwords don't match!</item>
    <string-array name="tagsList">
        <item>SPORT</item>
        <item>WORK</item>
        <item>OUTDOORS</item>
        <item>SEX</item>
    </string-array>
</resources>
